<resources>
    <string name="app_name">Carato</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_now">Register now</string>
    <string name="register">Register</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="birth_date">Birth date</string>
    <string name="confirm_password">Confirm password</string>
    <string name="name">Name</string>
    <string name="model">Model</string>
    <string name="type">Type</string>
    <string name="administrator">Administrator</string>
    <string name="user">User</string>
    <string name="login_as">Login as</string>
    <string name="or">Or</string>
    <string name="seats">Seats</string>
    <string name="doors">Doors</string>
    <string name="transmission">Transmission</string>
    <string name="rent_cost_day">Rent cost / day</string>
    <string name="choose_your_birth_date">Choose your birth date</string>
    <string name="search">Search</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>
    <string name="gallery">Gallery</string>
    <string name="logout">Logout</string>
    <string name="reservations">My Reservations</string>
    <string name="confirm">Confirm</string>
    <string name="save">Save</string>
    <string name="my_profile">My Profile</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_pwd">Confirm Pwd</string>
    <string name="change_password">Change Password</string>
    <string name="username">Username</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
</resources>
