<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/register_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editText_fname"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/border_shape"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/editText_uname"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:text="@string/password"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBaseline_toBaselineOf="@+id/editText_pass"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/spinner_gender"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/border_shape"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/editText_birth"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/editText_email"
                app:layout_constraintTop_toBottomOf="@+id/editText_email" />

            <EditText
                android:id="@+id/editText_pass"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/border_shape"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/editText_cpass"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_birth" />

            <EditText
                android:id="@+id/editText_birth"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/border_shape"
                android:ems="10"
                android:inputType="date"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/editText_pass"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_gender" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:text="@string/email"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBaseline_toBaselineOf="@+id/editText_email"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:text="@string/gender"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/spinner_gender"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/spinner_gender" />

            <EditText
                android:id="@+id/editText_cpass"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/border_shape"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_pass" />

            <EditText
                android:id="@+id/editText_uname"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/border_shape"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/editText_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_fname" />

            <EditText
                android:id="@+id/editText_email"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/border_shape"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/spinner_gender"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_uname" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:text="@string/confirm_password"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBaseline_toBaselineOf="@+id/editText_cpass"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:text="@string/full_name"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBaseline_toBaselineOf="@+id/editText_fname"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:text="@string/birth_date"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBaseline_toBaselineOf="@+id/editText_birth"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:text="@string/username"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBaseline_toBaselineOf="@+id/editText_uname"
                app:layout_constraintStart_toStartOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/register"
        android:textColor="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>